Project Data Bug Fix + Button Spacing I fixed a bug where the project urls wernt being saved. I also added some spacing on the top of the buttons so when the buttons wrapped around they would still look good

--- a/public/stylesheets/projects.css
+++ b/public/stylesheets/projects.css
@@ -36,8 +36,5 @@
 
 .project_buttons .btn {
 	margin-right: 20px;
-}
-
-.project_buttons {
 	margin-top: 20px;
 }
